2007-10-03  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_driver.c: (VIAPreInit):

	Fix memory detection for P4M900 and CX700

2007-09-12  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_bios.h:
	* unichrome/via_driver.c: (VIAWriteMode), (VIAAdjustFrame),
	(VIASwitchMode):
	* unichrome/via_mode.c: (ViaModeSecondaryVGAFetchCount),
	(ViaModeSecondaryVGAOffset), (ViaModeSecondaryVGA):
	* unichrome/via_swov.c: (Upd_Video):
	* unichrome/via_vbe.c: (ViaVbeSetPanelMode), (ViaVbeSetMode):

	Fix offset when using vbe modes on secondary

2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_id.c:

	Added Gigabyte GA-VM900M ID, reported by Alexandre Penasso Teixeira

2007-09-07  Gabiel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevel.h:
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* unichrome/via.h:
	* unichrome/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit),
	(VIASave), (VIARestore), (VIALoadPalette):
	* unichrome/via_driver.h:
	* unichrome/via_mode.c: (ViaOutputsDetect):
	* unichrome/via_swov.c: (Upd_Video):
	* unichrome/via_vbe.c: (ViaVbeInitInt10),
	(ViaVbeGetRefreshRateIndex), (ViaVbeGetActiveDevices),
	(ViaVbeSetActiveDevices), (ViaVbeSetPanelExpansion),
	(ViaVbeSetRefresh), (ViaVbeSetMode), (ViaVbeSaveRestore),
	(ViaVbeModePreInit):
	* unichrome/via_xvmc.c: (ViaInitXVMC), (ViaXvMCCreateContext):

	Merged vn896_branch from revision 361 to 391

2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_driver.c: (VIAPreInit):
	* unichrome/via_mode.c: (ViaOutputsDetect):
	* unichrome/via_vbe.c: (ViaVbeSetActiveDevices):

	Disabled TV detection for P4M900

2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_driver.h:
	* unichrome/via_vbe.c: (ViaVbeInitInt10),
	(ViaVbeGetRefreshRateIndex), (ViaVbeGetActiveDevices),
	(ViaVbeSetActiveDevices), (ViaVbeSetPanelExpansion),