@@ -1,3 +1,9 @@
+2007-10-05  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
+
+	* unichrome/via_swov.c: (Upd_Video):
+
+	Enable colorkey on secondary.
+
 2007-10-03  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
 
 	* unichrome/via_driver.c: (VIAPreInit):
